# http-service

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
examples/: simple_response.rs
http-service-h1/: Cargo.toml
http-service-h1/examples/: hello.rs
http-service-h1/src/: lib.rs
http-service-hyper/: Cargo.toml
http-service-hyper/src/: lib.rs
http-service-lambda/: Cargo.toml
http-service-lambda/examples/: README.md  hello_world.rs
http-service-lambda/src/: lib.rs
http-service-mock/: Cargo.toml
http-service-mock/src/: lib.rs
src/: lib.rs
