[package]
authors = ["Aaron Turon <aturon@mozilla.com>"]
description = "Types and traits for standardizing async HTTP services"
repository = "https://github.com/rustasync/http-service"
documentation = "https://docs.rs/http-service"
keywords = ["http-service", "http", "web", "async"]
categories = [
  "network-programming",
  "asynchronous",
  "web-programming::http-server"
]
readme = "README.md"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service"
version = "0.4.0"

[workspace]
members = ["http-service-hyper", "http-service-mock", "http-service-h1"]

[dependencies]
http-types = "1.0.1"
async-std = { version = "1.5.0", default-features = false, features = ["std"] }

[dev-dependencies]
http-service-hyper = { version = "0.4.0", path = "./http-service-hyper" }
