[package]
authors = [
    "dignifiedquire <me@dignifiedquire.com>"
]
description = "HttpService server that uses http-types and async-h1 as backend"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-h1"
repository = "https://github.com/http-rs/http-service"
documentation = "https://docs.rs/http-service-h1"
version = "0.1.0"

[dependencies]
http-service = { version = "0.4.0", path = ".." }
http-types = "1.0.1"
async-h1 = "1.1.0"
async-std = { version = "1.5.0", default-features = false, features = ["std"] }

[features]
default = ["runtime"]
runtime = ["async-std/default"]
