[package]
authors = [
    "Aaron Turon <aturon@mozilla.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
description = "HttpService server that uses Hyper as backend"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-hyper"
repository = "https://github.com/rustasync/http-service"
documentation = "https://docs.rs/http-service-hyper"
version = "0.3.1"

[dependencies]
http = "0.1"
http-service = { version = "0.3.1", path = ".." }
futures-tokio-compat = { git = "https://github.com/Nemo157/futures-tokio-compat", rev = "8a93702bba5210314e4c268a513f1ecd9f48d7df" }
hyper = { version = "=0.13.0-alpha.1", default-features = false }
tower-service = "0.3.0-alpha.1"

[dependencies.futures-preview]
version = "0.3.0-alpha.18"

[features]
default = ["runtime"]
runtime = ["hyper/runtime"]

[dev-dependencies]
romio = "0.3.0-alpha.9"
