[package]
authors = [
    "Aaron Turon <aturon@mozilla.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
description = "HttpService server that uses Hyper as backend"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-hyper"
repository = "https://github.com/rustasync/http-service"
documentation = "https://docs.rs/http-service-hyper"
version = "0.3.1"

[dependencies]
http = "0.1"
http-service = { version = "0.3.1", path = ".." }
futures-tokio-compat = { git = "https://github.com/Nemo157/futures-tokio-compat" }
hyper = { version = "0.13.0-alpha.4", default-features = false, features = ["runtime", "unstable-stream"] }
tokio = "0.2.0-alpha"
tower-service = "0.3.0-alpha"

[dependencies.futures-preview]
version = "0.3.0-alpha.18"

[dev-dependencies]
romio = "0.3.0-alpha.9"
