[package]
authors = [
    "Aaron Turon <aturon@mozilla.com>",
    "Yoshua Wuyts <yoshuawuyts@gmail.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
description = "HttpService server that uses Hyper as backend"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-hyper"
repository = "https://github.com/http-rs/http-service"
documentation = "https://docs.rs/http-service-hyper"
version = "0.4.1"

[dependencies]
http = "0.2"
http-service = { version = "0.4.0", path = ".." }
hyper = { version = "0.13.1", default-features = false, features = ["stream"] }
http-types = { version = "1.0.1", features = ["hyperium_http"] }

[dependencies.futures]
features = ["compat", "io-compat"]
version = "0.3.1"

[features]
default = ["runtime"]
runtime = ["hyper/runtime"]

[dev-dependencies]
async-std = "1.5.0"
