[package]
authors = [
    "Bastian Gruber <gruberbastian@me.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
description = "Creates a HttpService server mock to test requests/responses against your app"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-mock"
repository = "https://github.com/rustasync/http-service"
documentation = "https://docs.rs/http-service-mock"
version = "0.3.1"

[dependencies]
http-service = { version = "0.3.1", path = ".." }

[dependencies.futures-preview]
version = "0.3.0-alpha.18"
