[package]
authors = [
    "Bastian Gruber <gruberbastian@me.com>",
    "Wonwoo Choi <chwo9843@gmail.com>",
]
description = "Creates a HttpService server mock to test requests/responses against your app"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "http-service-mock"
repository = "https://github.com/http-rs/http-service"
documentation = "https://docs.rs/http-service-mock"
version = "0.4.0"

[dependencies]
futures = "0.3.1"
http-service = { version = "0.4.0", path = ".." }
